Fix the unreadable wishlist button on products

--- a/src/assets/styles/components/ProductListView.css
+++ b/src/assets/styles/components/ProductListView.css
@@ -17,7 +17,7 @@
 
     .product-img {
         width: 20%;
-        border: 1px solid var(--border-color-2);
+        border: 1px solid var(--border-color);
         padding: 10px;
         position: relative;
         overflow: hidden;
@@ -30,21 +30,41 @@
             height: auto;
         }
 
-        & svg {
+        .heart {
             position: absolute;
             top: 10px;
             right: 10px;
             cursor: pointer;
-            fill: var(--text-color);
-            transition: fill 0.3s;
+            background-color: #fff;
+            border: 1px solid var(--border-color);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 5px;
+            border-radius: 50%;
+            transition: .3s ease all;
+
+            & svg {
+                fill: #000;
+                transition: .3s ease all;
+            }
 
             &:hover {
-                fill: var(--primary);
+                background-color: rgb(223, 69, 69);
+                border: 1px solid transparent;
+
+                & svg {
+                    fill: #fff;
+                }
             }
         }
+        .heart.active {
+            background-color: rgb(223, 69, 69);
+            border: 1px solid transparent;
 
-        & svg.active {
-            fill: red;
+            & svg {
+                fill: #fff;
+            }
         }
     }
 
